--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -4,8 +4,10 @@
 
 plugins {
     id 'taskquest.kotlin-library-conventions'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
 }
 
 dependencies {
     api project(':list')
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0'
 }
