--- a/console/build.gradle
+++ b/console/build.gradle
@@ -11,6 +11,10 @@ dependencies {
     implementation project(':utilities')
 }
 
+run {
+    standardInput = System.in
+}
+
 application {
     // Define the main class for the application.
     mainClass = 'taskquest.console.views.MainKt'
