--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@
 
 plugins {
     id 'taskquest.kotlin-application-conventions'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+
 }
 
 dependencies {
@@ -14,4 +16,10 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClass = 'taskquest.app.AppKt'
+}
+
+
+javafx {
+    version = '18.0.2'
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media']
 }
