- Created Spring Boot remote server for hosting JSON data - Updated serialization to Jackson (Spring Boot default format) - Updated SaveUtils to work with Spring Boot

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,4 @@
  */
 
 rootProject.name = 'cs-346-project'
-include('app', 'utilities', 'console')
+include('app', 'utilities', 'console', 'server')
