--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -9,4 +9,5 @@ plugins {
 
 dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.14.+'
 }
