--- a/console/build.gradle
+++ b/console/build.gradle
@@ -9,6 +9,7 @@ plugins {
 
 dependencies {
     implementation 'org.apache.commons:commons-text'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.14.+'
     implementation project(':utilities')
 }
 
