--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ plugins {
 
 dependencies {
     implementation 'org.apache.commons:commons-text'
+    implementation 'org.controlsfx:controlsfx:11.1.2'
     implementation project(':utilities')
 }
 
