--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ plugins {
 dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation 'org.controlsfx:controlsfx:11.1.2'
+    implementation 'com.dustinredmond.fxtrayicon:FXTrayIcon:4.0.1'
     implementation project(':utilities')
 }
 
