--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation 'org.controlsfx:controlsfx:11.1.2'
     implementation project(':utilities')
+    implementation 'com.azure:azure-identity:1.+'
+    implementation 'com.microsoft.graph:microsoft-graph:5.+'
 }
 
 application {
