switch authflow to interactive browser

--- a/utilities/src/main/resources/oAuth.properties
+++ b/utilities/src/main/resources/oAuth.properties
@@ -1,5 +1,6 @@
-app.clientId=d9e985b7-4815-446b-8ca8-2b813b35a613
+app.clientId=2fdb4fdf-3a6c-4386-8674-b9857a45976f
 app.clientSecret=YOUR_CLIENT_SECRET_HERE_IF_USING_APP_ONLY
 app.tenantId=YOUR_TENANT_ID_HERE_IF_USING_APP_ONLY
 app.authTenant=common
+app.redirectURL=http://localhost:8000
 app.graphUserScopes=user.read,Calendars.ReadWrite
