working undo/redo on task list creation

--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     implementation 'com.azure:azure-identity:1.+'
     implementation 'com.microsoft.graph:microsoft-graph:5.+'
     implementation 'org.jsoup:jsoup:1.13.1'
+    implementation 'com.google.code.gson:gson:2.10'
 }
