- copy and paste new and improved functionality - fix checkcombobox - hotkey for copy-paste, manually sort - a lot of other small fixes and bugs - implemented multi user in front end using backend functions - fixed very buggy trayicon

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation project(':utilities')
     implementation 'com.azure:azure-identity:1.+'
     implementation 'com.microsoft.graph:microsoft-graph:5.+'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.14.+'
 }
 
 application {
